testdata/de/dm/intellij/liferay/language/groovy/LiferayGroovyDeprecationInspectionTest/myimport.groovy
<warning descr="Unused import"><warning descr="User Operation and Importer/Exporter Classes and Utilities Moved or Removed. (see LPS-63205)">import <error descr="Cannot resolve symbol 'com'">com</error>.liferay.portal.kernel.security.exportimport.UserExporterUtil</warning></warning>